versioned_docs/version-5.6/14.releasenotes/01.5x/01.5x.md
---
title: 5.x Release Notes
taxonomy:
    category: docs
slug: /releasenotes/5x
---

### Release Notes for 5.x

:::note

To receive email notifications of new releases, please subscribe to this SUSE mailing list: https://lists.suse.com/mailman/listinfo/neuvector-updates

:::

#### 5.6.2 September 2026

:::note Critical CVE Stats After Upgrades
When upgrading controllers to version `5.6.2 (or later) from a version that does not support critical-level severity (e.g., `5.5.3`), existing scanner pods must be restarted or redeployed.

Older scanner pods cache the controller's initial capability response. They will not recognize that the upgraded controller supports critical-level severity until they are restarted and re-query the controller on startup.
:::

##### Feature requests

- **NVSHAS-10317**: [Web UI] Once CA is added, TLS CA file should not be editable

##### Enhancement

- **issue-2668**: Add Traefik details into the NV Helm Chart

##### Bug fixes

- **NVSHAS-10289**: Group contention resolution Restrict Mode on k3s/rke2 yields unexpected results
- **NVSHAS-10331**: HTTP chunk size exceeds the configured limit of 31457280 bytes when exporting Vulnerabilities
- **issue-1272**: "Vulnerabilities" column always shows wrong number in "Details" section
- **issue-2673**: size the AF_PACKET ring blocks from the runtime page size
- **issue-2686**: Duplicate response rules are created when importing(thru CRD) same-name response rules with changes 
- **issue-2709**: When CRD-defined response rules are triggered, the webhook call(if configured) is not sent
- **issue-2727**: NV doesn't prevent user from importing federated groups/policies thru CRD 
- **fix**: support automate module name with parsing cap
- **chore(deps)**: dependency updates & golang upgrade

##### References

- [Admission Control Bypass via Hardcoded Sidecar Image Exemption](https://github.com/neuvector/neuvector/security/advisories/GHSA-78r4-3wfq-r2xm)
- [Logout bypass via alternate JWT spelling](https://github.com/neuvector/neuvector/security/advisories/GHSA-wcx5-mq6c-c54j)
- [The SAML and OpenID SSO login does not have proper identifier for login users](https://github.com/neuvector/neuvector/security/advisories/GHSA-c6rx-pmvf-m3jx)
- [SAML Audience Confusion Allows Cross-SP Authentication ](https://github.com/neuvector/neuvector/security/advisories/GHSA-wgg5-24xq-px35)
- [OS Command Injection in Packet-Capture (Sniffer) Filter leading to Remote Code Execution on Kubernetes Nodes ](https://github.com/neuvector/neuvector/security/advisories/GHSA-vr77-8vmq-qfmj)

#### 5.6.1 August 2026

:::note Critical CVE Stats After Upgrades
When upgrading controllers to version `5.6.1-rc1` (or later) from a version that does not support critical-level severity (e.g., `5.5.3`), existing scanner pods must be restarted or redeployed.

Older scanner pods cache the controller's initial capability response. They will not recognize that the upgraded controller supports critical-level severity until they are restarted and re-query the controller on startup.
:::

##### Feature requests

- **issue-2614**: Revert "zero-drift" for Processes to NOT be the default.
- **feat**: Better error handling for image scan.
- **feat**: Provide vcs information in executible files.

##### Bug fixes

- **issue-2669**: Suppress log messages Benchmark report not found.
- **fix**: Match Istio proxymesh traffic against parent workload rules
- **fix**: Size the netlink dump buffer for kernels with pages over 4K
- **fix**: Fix null value shown in dashboard risk panel.
- **fix**: Resolve code scanning findings & reduce unnecessary info/warn logs.

#### 5.6.0 July 2026

:::note Critical CVE Stats After Upgrades
When upgrading controllers to version `5.6.0-rc1` (or later) from a version that does not support critical-level severity (e.g., `5.5.3`), existing scanner pods must be restarted or redeployed. 

Older scanner pods cache the controller's initial capability response. They will not recognize that the upgraded controller supports critical-level severity until they are restarted and re-query the controller on startup.
:::

##### Feature requests

- **issue-2235**: Add a column containing the image digest in generated reports for containers.
- **NVSHAS-8242**: Add **Critical** CVE severity to support CVSS v3 scores from 9.0 to 10.0.
- **NVSHAS-10298**: Include the CVE database version in the NeuVector vulnerability report.
- **feat**: Move the readiness probe from `exec` to `httpGet`.
- **NVSHAS-10024**: Add an option to filter vulnerabilities based on the base OS image.
- **issue-1195**: Show the severity filter in the report filter.
- **feat**: Optimize the scanner registration flow.

##### Bug fixes

- **NVSHAS-10283**: Custom groups with image or namespace criteria show no members.
- **issue-2348**: Hide global permissions from the **Show advanced settings** table.
- **issue-2355**: The **View all scanned images** page in the registry does not show critical vulnerabilities.
- **enhance**: Reject loading or uploading an empty or corrupted CVE database.
- **nvbench**: The k3s CIS check OOM-kills the enforcer on nodes with a large journal.
- **fix**: Allow explicit network rules in restrictive group mode.
- **fix(lint)**: Resolve `errcheck` findings.
- **fix(code-scanning)**: Resolve code scanning findings.
- **issue-2519**: silent error handling in consul kv slot reads in network functions
- **issue-2485**: scanner cvedb upgrade takes huge memory utilization

#### 5.5.3 June 2026

This release rebuilds the container images to patch CVEs in the underlying operating system, application, and library dependencies. It includes no new features or breaking changes and is fully backward compatible.

##### Bug fixes

- [#2227](https://github.com/neuvector/neuvector/issues/2227): UBI controller images do not work in newer OpenShift environments.

#### 5.5.2 May 2026

This release rebuilds the container images to patch CVEs in the underlying operating system, application, and library dependencies. It includes no new features or breaking changes and is fully backward compatible.

#### 5.5.1 April 2026

##### Feature requests

* [#2248](https://github.com/neuvector/neuvector/issues/2248): Expose OS scan support status from scanner results
  
##### Bugs fixed
  
* [#1140](https://github.com/neuvector/neuvector/issues/1140): The **accept vulnerabilities in Node** page can be brought out of the View drop down box like that of the container
* [#1154](https://github.com/neuvector/neuvector/issues/1154): Report column content shifting with multiple fix versions separated by a comma
* [#2255](https://github.com/neuvector/neuvector/issues/2255): Unable to scan image registry by API(v1/scan/repository) with proxy enabled through curl
* [#1170](https://github.com/neuvector/neuvector/issues/1170): Event handling function that is set in the icon element does not work after Angular 20 migration.
* [#1175](https://github.com/neuvector/neuvector/issues/1175): The federated prefix and the registry name are not properly aligned when attempting to add a federated registry to the primary cluster
* [#1156](https://github.com/neuvector/neuvector/issues/1156): Auto-scan button malfunctioning
* [#1179](https://github.com/neuvector/neuvector/issues/1179): Show advance setting button is not displayed when creating user
* [#1183](https://github.com/neuvector/neuvector/issues/1183): Auto-scan toggle state is not synchronized between **Dashboard** and **Assets -> Nodes** page

#### 5.5.0 March 2026

##### Feature requests

* **NVSHAS-10131**: Improve the Vulnerabilities Report
* **NVSHAS-10195**: Upgrade UI framework from Angular 14 to Angular 20

##### Bugs fixed

* **NVSHAS-10244**: NeuVector Rancher SSO authentication error when Rancher Helm release name is not `rancher`
* **NVSHAS-10255**: Add user validation on APIs that do not communicate with the controller
* **NVSHAS-10264**: Display control is missing on the API key page
* **NVSHAS-10281**: Suppress log in the response rule is not working

=== Announcement

* **NVSHAS-10246**: Deprecate Docker native support in NeuVector

=== References

* [Potential information leakage from manager `/network/graph` API](https://github.com/neuvector/manager/security/advisories/GHSA-hx45-873x-74qv)


#### 5.4.9 February 2026

##### New Features

* **NVSHAS-9921**: Managed cluster deployed via configmap and without persistent storage should be able to reconnect after a disconnect
* **NVSHAS-10014**: NeuVector needs option to enable GPU acceleration before opening "Network Activity"

##### Bugs Fixed

* **NVSHAS-9936**: [RST-Documentation] Need to update documentation for embargoed issue
* **NVSHAS-10036**: Rancher to NV login is not working for some users
* **NVSHAS-10061**: Remote Repository scan reporting "RPC request fail"
* **NVSHAS-10121**: [UI-ext] Dashboard information missing in Rancher UI Extension
* **NVSHAS-10175**: Refactor the OPA generate function to avoid rego online verify
* **NVSHAS-10203**: [Dup][UI-ext] Dashboard information missing in Rancher UI Extension
* **NVSHAS-10207**: Country flag is not showing on the product build
* **NVSHAS-10209**: [Registry adapter] Registry value is missing a slash afterwards in the scan-report
* **NVSHAS-10213**: [Scanner] Handling of passwords as command arguments (20)
* **NVSHAS-10214**: [Controller] InstallationID is used for encrypt/decrypt user token (24)
* **NVSHAS-10215**: The review rule button is not visible in the managed cluster
* **NVSHAS-10218**: [Controller] Lack of validation for RSA Keysize (23)
* **NVSHAS-10219**: [Controller] InstallationID is used for encrypt/decrypt user token (24)
* **NVSHAS-10221**: [Controller] Export local groups(and other policies) thru redirected UI from primary cluster always fails
* **NVSHAS-10222**: [Manager] After a cluster successfully joins fed, UI doesn't auto-refresh
* **NVSHAS-10247**: Disable the access to subpath for some manager APIs

#### 5.4.8 December 2025

##### New Features

* **NVSHAS-10186**: Return file_path after export to remote repository successfully 
* **NVSHAS-10168**: Add remote export option to system configurations page - Federation only
* **NVSHAS-10142**: Make 'enforce TLS verification' enabled by default for new NV deployment (6)
* **NVSHAS-10068**: [UI] Support "Export"/"Import" buttons on all fed-related policy pages
* **NVSHAS-10026**: Possibility of creating Federation rules through automation RESTAPI only
* **NVSHAS-9300**:  Helm chart: manager-service and controller-service customizable TCP ports

##### Bugs Fixed

* **NVSHAS-10196**: Replace country flag images to avoid CVE-2025-66412 / GHSA-v4hv-rgfq-gp49
* **NVSHAS-10185**: Suggest add "Fed" in exported file name when exporting fed policy to local or remote in NV UI
* **NVSHAS-10180**: [C03084][C03092][C03085] [Container Scan] It fails to detect package.json related modules
* **NVSHAS-10174**: Controller wrongly allows 'Committer Name' & 'Email' in Remote Repository Configuration to be empty in POST request
* **NVSHAS-10173**: [UI] Newly-created rule in fed DLP/WAF sensor page cannot be edited
* **NVSHAS-10172**: [UI] Incorrect floating message when try to delete a fed webhook that is in-use
* **NVSHAS-10171**: [UI] strange behavior for Federated Policy -> Configuration page
* **NVSHAS-10169**: [Federated policy][Configuration] After webhook is updated, the reflected record shows the type is user created
* **NVSHAS-10167**: [UI] Incorrect response rules displayed after selecting a fed group
* **NVSHAS-10166**: [UI] Incorrect floating message after importing fed configuration
* **NVSHAS-10165**: [UI] Network policy mode and Process profile mode should not be in the export federated groups modal
* **NVSHAS-10164**: [Groups] Hide selection checkbox on federated groups on local group page
* **NVSHAS-10163**: [UI] 'Export to Remote Repository' is missing for all fed policy pages' export
* **NVSHAS-10162**: HIGH CVEs FOUND in NV Images
* **NVSHAS-10157**: [Scan] Fixed Version is empty in some image
* **NVSHAS-10156**: NeuVector Scanner is not reporting CVEs for the npm repository tinymce 
* **NVSHAS-10154**: Only response rules without group can be exported in response rules page
* **NVSHAS-10151**: Incorrect payload for creating fed WAF sensor
* **NVSHAS-10140**: Unexpected checkbox for DLP/WAF export
* **NVSHAS-10139**: [Controller] Controller does not initialize when enforcer is not deployed
* **NVSHAS-10133**: Enforcer pods crashing
* **NVSHAS-10128**: [Controller] Controller doesnt initialize when disabling scanner using cve.scanner.enabled=false parameter
* **NVSHAS-10116**: Controller throwing errors "...Watch failure - error..."
* **NVSHAS-10113**: [UI] 'View Federated Repositories' on Assets -> Registries page

## References:

* [OpenID Connect is vulnerable to man-in-the-middle (MITM)](https://github.com/neuvector/neuvector/security/advisories/GHSA-4jj9-cgqc-x9h5)

#### 5.4.7 October 2025

:::note
In NeuVector v5.4.6 and later, the Compliance feature requires NeuVector Prime and must have controller.`prime.enabled: true` set in the values.yaml file. If the Compliance feature is missing after upgrade, refer to[Compliance Feature Behavior Across NeuVector Versions](../../12.troubleshooting/01.troubleshooting/01.troubleshooting.md#compliance-feature-behavior-across-neuvector-versions).
:::

##### New Features

* **NVSHAS-10085**:	Add a configuration setting on UI for allowing groups switch between least privileged & more privileged.
* **NVSHAS-10084**:	Move admission control related crd structs in `nvsecurityrule_def.go` from `resource/` to `api/` for dependency issue when building `neuvector-kubewarden-policy-converter`.
* **NVSHAS-10073**:	Add a new field for exported admission control rules in the yaml file.
* **NVSHAS-10067**:	Cli for new configuration setting that allows ns user to export.
* **NVSHAS-10065**:	Add a configuration setting on UI for allowing namespace user to export.
* **NVSHAS-9918** : Add ability to control policy restriction mode.

##### Bugs Fixed

* **NVSHAS-10080**:	Cannot create a federal response rule for Admission event
* **NVSHAS-10077**:	Unexpected checkbox for admission control export
* **NVSHAS-10071**:	process rule missing in enforcer pod
* **NVSHAS-10070**:	Creating multiple response rule fail on some cluster
* **NVSHAS-10066**:	First time login does not show link for bootstrap helper when user directly access UI in Rancher deployment
* **NVSHAS-10054**:	Do not always reset k8s ValidatingWebhookConfiguration to avoid infinite updating loops
* **NVSHAS-10049**:	Follow up on the NV scan JFrog Subdomain mode issue
* **NVSHAS-10006**:	Group export is empty for namespace users.
* **NVSHAS-9761** :	Harbor registry with s3 storage backend repository scan error

## References:

* [Removal of hard-coded encryption key](https://github.com/neuvector/neuvector/security/advisories/GHSA-h773-7gf7-9m2x)
* [Enforce TLS verification for requests to Telemetry server](https://github.com/neuvector/neuvector/security/advisories/GHSA-qqj3-g7mx-5p4w)
* [Check consul ports for enforcer](https://github.com/neuvector/neuvector/security/advisories/GHSA-c8g6-qrwh-m3vp)

Refer to the [Security Advisory and CVEs](versioned_docs/version-5.6/cve.md) documentation for more information.

#### 5.4.6 August 2025

:::note
In NeuVector v5.4.6 and later, the Compliance feature requires NeuVector Prime and must have controller.`prime.enabled: true` set in the values.yaml file. If the Compliance feature is missing after upgrade, refer to[Compliance Feature Behavior Across NeuVector Versions](../../12.troubleshooting/01.troubleshooting/01.troubleshooting.md#compliance-feature-behavior-across-neuvector-versions).
:::

##### New Features

* **NVSHAS-6733**: Export response rules as CRD.
* **NVSHAS-9899**: NeuVector Process Profile Alerts for Java Services contain sensitive data.
* **NVSHAS-9990**: Adopt new hash algorithm for user passwords.
* **NVSHAS-9968**: Support setting default admin account's default password.

##### Bugs Fixed

* **NVSHAS-10062**: Manager not showing ERROR when failing to create admin password during 1st login.
* **NVSHAS-10041**: Federation operation failed "invalid data" when configuring federation through ConfigMap.
* **NVSHAS-10018**: Neuvector is not scanning all images in GitLab Registry.
* **NVSHAS-10017**: False Positive Security Alert related to allowed process.
* **NVSHAS-10001**: Protect/Monitor enforcements "linger" after group deletion.
* **NVSHAS-9985**:	NeuVector (Fed Master) creates a problem for all requests coming from outside.
* **NVSHAS-9981**:	Security Event is triggered whenever a new "Process Profile Rule" is added or changed in a group.

##### Security Advisories

* [Admin account has insecure default password](https://github.com/neuvector/neuvector/security/advisories/GHSA-8pxw-9c75-6w56)
* [Insecure password management vulnerable to rainbow attacks](https://github.com/neuvector/neuvector/security/advisories/GHSA-8ff6-pc43-jwv3)
* [Process with sensitive arguments lead to leakage](https://github.com/neuvector/neuvector/security/advisories/GHSA-w54x-xfxg-4gxq)

#### 5.4.5 July 2025

##### New Features

* **NVSHAS-9776**: Add etcd toleration in helm chart.

##### Bug Fixes

* **NVSHAS-9507**: OCI container not getting scanned.
* **NVSHAS-9787**: Remove unnecessary manager log.
* **NVSHAS-9788**: Refine algorithm for generating certificate.
* **NVSHAS-9789**: Remove unnecessary manager log on remote registry configuration.
* **NVSHAS-9867**: NeuVector shows `.NET Library System.Formats.Asn1 v8.013` affected CVE 2024-38095.
* **NVSHAS-9883**: [quay.io]Wildcard filters not working for docker registry.
* **NVSHAS-9911**: Scanning the repo using REST API results in an incorrect "message"
* **NVSHAS-9930**: CVE-2018-20796 for `glibc/libc-bin : 2.36-9+deb12u10` - False positive.
* **NVSHAS-9933**: Registry-adapter feature (Harbor) showing errors in target registry while scanning.
* **NVSHAS-9934**: Suspected zero-drift functionality malfunction.
* **NVSHAS-9940**: NV scan JFrog Subdomain mode issue.
* **NVSHAS-9942**: Images scans for customer images are failing.
* **NVSHAS-9945**: When the process name is too long, it's difficult to determine how to create the appropriate process profile rule.
* **NVSHAS-9946**: Display issue with Admission Control alert for Credential Type.
* **NVSHAS-9947**: [UI-ext] Compliance Chart Missing "Manual" Status in Rancher NeuVector.
* **NVSHAS-9948**: After upgrading to `5.4.3` NeuVector configuration has been lost.
* **NVSHAS-9949**: [Harbor][Incorrect user/pw] It still scan images even inputting incorrect user/pw.
* **NVSHAS-9952**: Remove 'signature' from usage report because NV no longer issues/checks the license key.
* **NVSHAS-9953**: Pods Enforcer keeps restarting.
* **NVSHAS-9954**: NeuVector prometheus-exporter generating duplicated metrics.
* **NVSHAS-9958**: Network rule enforcement takes long time.
* **NVSHAS-9960**: Scanners not working.
* **NVSHAS-9969**: fatal error: concurrent map writes results in enforcer component restart.
* **NVSHAS-9971**: NV UI about `Get Bootstrap Password`.
* **NVSHAS-9975**: [Manager] TypeError: `this.mousemoveListener` is not a function is observed on the NV GUI.
* **NVSHAS-9986**: Process profile rules and File access rules cannot be edited and removed in Federated policy group view.
* **NVSHAS-9988**: UI: Group pages is not showing all groups when more than 2k groups present.
* **NVSHAS-9991**: The group `nv.gatekeeper-controller-manager.openshift-azure-guardrails` is missing from UI.
* **NVSHAS-9993**: Replace md5 by sha256.
* **NVSHAS-9994**: The enforcer pod keeps restarting.
* **NVSHAS-9996**: NeuVector Helm chart should allow non-privileged mode of enforcer pods.
* **NVSHAS-9998**: Cannot export group from Neuvector federated master.
* **NVSHAS-10000**: Upgrade NV to BCI 15.7.
* **NVSHAS-10003**: Reload page does not work on standalone NV page while a Rancher UI is opening.
* **NVSHAS-10008**: Registry Scan - View menu is broken for Scanned Image.
* **NVSHAS-10010**: TCP SYN Flood blocks ingress causing complete ingress traffic being blocked.

#### 5.4.4 May 2025

##### New Features

* **NVSHAS-9915**: Show scan results from the Harbor scanner module in the NeuVector UI.
* **NVSHAS-9904**: Expose `imagePullPolicy` to `values.yaml` for each component.
* **NVSHAS-9869**: UI: Move DDoS Controls to the Group Pane.
* **NVSHAS-9840**: [GCP] NeuVector Autopilot support for GCP.
* **NVSHAS-9248**: Display unused Process/Network Rules with counters and `Last Used` timestamp.
* **NVSHAS-8160**: [Controller] Adjust some items for Security Risk Score calculation.
* **NVSHAS-4673**: Suggestion to add message before exporting groups.

##### Bug Fixes

* **NVSHAS-9931**: Add a warning if there are inconsistent versions of NeuVector products in multi-cluster.
* **NVSHAS-9925**: `/v1/scan/asset/images` API on the Registry Page fails.
* **NVSHAS-9913**: Problem with deleting several Network Rules related to Workload:XYZ groups.
* **NVSHAS-9912**: Update Helm about some K8s RBAC permissions needed by the controller service account.
* **NVSHAS-9909**: "Signed Out - Go to loading page" message displayed when using NeuVector Rancher NavLink.
* **NVSHAS-9898**: In a federated environment, modifying the criteria of a customer-created fed.* group (e.g. fed.core-systems) doesn't work.
* **NVSHAS-9894**: [Enforcer] `Nv.protect` denies controller readiness probe command `cat /tmp/ready`.
* **NVSHAS-9886**: Network activity does not resolve domain names for the custom external group connections.
* **NVSHAS-9884**: [Node Scan][Container Scan] Scan will fail.
* **NVSHAS-9873**: UI Advanced Filter search issue in NeuVector 5.4.2.
* **NVSHAS-9865**: Exported network policies differ, depending on the order of selection (same groups selected).
* **NVSHAS-9828**: [Enforcer: process] The NeuVector Enforcer is not able to detect short lived pods (Anything less than 5 seconds).
* **NVSHAS-9783**: After adding the network policy to deny icmp packets, NeuVector does not see any alerts in `Security Events`.
* **NVSHAS-9176**: Show a script error in the **Security Risks > Vulnerabilities** page if a user permission with the namespace `rt_scan:w` role is logged in.

#### 5.4.3 March 2025

##### New Features

* **NVSHAS-9793**: Allow Fed Global roles in LDAP/userinitcfg when deploying NeuVector through the ConfigMap and Secret.
* **NVSHAS-9764**: [RFE] Add support for Azure for "Remote Repository Configuration".
* **NVSHAS-9759**: Add date details in the Ingress-Exposure Report.
* **NVSHAS-9755**: Request to display environment variable names alongside values in alerts for secrets.
* **NVSHAS-9748**: [Helm] NeuVector Helm update for supporting name referral for common groups in CRD (NVSHAS0-4717).
* **NVSHAS-9426**: Add hostPath for Scanner to Helm chart.
* **NVSHAS-9326**: NeuVector - Harbor Pluggable Scanner Module.
* **NVSHAS-9835**: UI for disable auto-scan for node.
* **NVSHAS-7997**: Scanner connector for ghcr.io.
* **NVSHAS-7982**: Assign WAF sensors from Federation Master.

##### Bug Fixes

* **NVSHAS-9849**: Enforcers not registering with controllers.
* **NVSHAS-9847**: Wildcard filters not working for Docker registry.
* **NVSHAS-9833**: Configuration restore fails in Rancher deployments.
* **NVSHAS-9832**: Problem with creating network rules using the Workload group.
* **NVSHAS-9821**: Process name is not matched from the command line for the Process Profit Rule Alert.
* **NVSHAS-9817**: Creating NvClusterSecurityRule CRD shows successful creation, but it was not actually created due to duplicated process rule entries.
* **NVSHAS-9812**: NeuVector prometheus-exporter wrong metrics.
* **NVSHAS-9811**: [Manager] Unable to access GUI when using a custom certificate (CA) with root CA and intermediate CA on the secret.
* **NVSHAS-9801**: FIPS mode + `manager.env.ssl=false` causes Manager to error out.
* **NVSHAS-9792**: Federation policy syncing failing due to body size exceeding Consul max.
* **NVSHAS-9784**: NeuVector returning 404 during Jfrog image repository scanning.
* **NVSHAS-9783**: After adding the network policy to deny icmp packets the user does not see any alert in "Security Events".
* **NVSHAS-9780**: NeuVector single sign on not working with Rancher NavLink.
* **NVSHAS-9777**: Webhook JSON with duplicated "level" keys.
* **NVSHAS-9770**: Auto-Switch after Zero-Drift mode switches incorrect policy.
* **NVSHAS-9765**: File access doesn't get fully blocked in Protect mode.
* **NVSHAS-9756**: Enforcer reached maximum CPU and has several Memory Pressure alerts.
* **NVSHAS-9668**: Compliance test failing on RKE2.
* **NVSHAS-9265**: Incomplete and incorrect vulnerability scan results on PRE PCI environment.
* **NVSHAS-9227**: Registry scan gets stuck in the middle of scanning process and goes to "Idle" state.
* **NVSHAS-9729**: Incorrect count of vulnerabilities are observed when multiple statefulset with the "same name" in namespaces are deployed in a project.
* **NVSHAS-9810**: NeuVector controller not responding and UI not accessible.

#### 5.4.2 January 2025

##### New Features

* **NVSHAS-9726**: The monitor now passes proxy URL.
* **NVSHAS-9719**: Announces the retirement of built-in certificates.
* **NVSHAS-9715**: Helm Chart value support for setting nodeport on controller and manager.
* **NVSHAS-9710**: Include a sortable `feed_rating` column into the **Vulnerabilities** tab.
* **NVSHAS-9669**: Overall security score through REST API.
* **NVSHAS-9590**: Ability to choose which vulnerability score for all assets.
* **NVSHAS-7555**: Include "Auto Refresh" option under Security Events.

##### Bug Fixes

* **NVSHAS-9662**: Inconsistent Role/RoleBinding logic in Helm chart 2.8.2.
* **NVSHAS-9652**: Observed difference in syslog format in splunk.
* **NVSHAS-9649**: Container link produces 404 response code in security-event.
* **NVSHAS-9613**: NeuVector Manager Pod Error / NeuVector Web UI Unavailable.
* **NVSHAS-9507**: OCI container not getting scanned.
* **NVSHAS-9443**: Upgrade/Install through ArgoCD fails as it cannot create leases.coordination.k8s.io object.
* **NVSHAS-9436**: Possible CVE false negative against CVE-2024-7347.
* **NVSHAS-8386**: Private keys and self-signed certs still shipped in multiple images.
* **NVSHAS-9754**: [UI] Prevent Rancher relates SSO user disable Authentication of OpenShift or Rancher's RBAC.
* **NVSHAS-9751**: [Runtime Protection] Monitor Mode + Zero-Drift is not generating any alerts when a child process is executed.
* **NVSHAS-9721**: UI should pop up appropriate error message when user inputs wrong registry name.
* **NVSHAS-9696**: Inconsistent colour indication of assets on vulnerability page.
* **NVSHAS-9686**: Hardcoded namespace for the registry adapter certificate in the Neuvector Helm chart.
* **NVSHAS-9678**: Excessive error traces after the linter changes.
* **NVSHAS-9670**: Manager: Plain text response double quotes issue and java unnamed library issue in sbt run.
* **NVSHAS-9667**: Setting `CTRL_PATH_DEBUG` env variable to error in controller deployment is not working.
* **NVSHAS-9665**: File Access rule: Delete predefined rules produces "setRowData" error.
* **NVSHAS-9664**: Policy Group: Delete custom script produces "setRowData" TypeError.

:::note
The default types of manager and registry adapter service have been changed to ClusterIP.  Users are still able to override the setting by overridding the `manager.svc.type` and `cve.adapter.svc.type` if NodePort is preferred.
:::

In the NeuVector 5.4.2 release, support is discontinued for deployments using the built-in internal certificate. The certificate found at `/etc/neuvector/certs/internal` within NeuVector 5.4.2 container images will be removed. To continue using NeuVector, users should:

##### 5.4.2 New Installation:

###### Using Helm:

- Enable the `internal.autoGenerateCert` and `internal.autoRotateCert` flags in the Helm charts (these will be enabled by default starting with the 5.4.2 release). Alternatively, a YAML method is linked below.

###### Using YAML:

- Provide an internal certificate using the existing methods:
  https://open-docs.neuvector.com/deploying/production/internal

##### Upgrading from Previous Versions to 5.4.2:

Please create and configure internal certificates from the scanner for the controller, enforcer, and registry-adapter to achieve a rolling update without losing data. It is still recommended to take a backup of your configuration before upgrading. 

The following steps are only needed if your deployment uses a `.yaml` file. Upgrading using Helm does not need these additional steps due to the internal certificates getting created by default via the following flags: `internal.autoGenerateCert` and `internal.autoRotateCert`.

```shell
docker run -it --entrypoint=bash neuvector/scanner:3.654 -c "cat /etc/neuvector/certs/internal/ca.cert" > ca.crt
```

```shell
docker run -it --entrypoint=bash neuvector/scanner:3.654 -c "cat /etc/neuvector/certs/internal/cert.pem" > tls.crt
```

```shell
docker run -it --entrypoint=bash neuvector/scanner:3.654 -c "cat /etc/neuvector/certs/internal/cert.key" > tls.key
```

```shell
kubectl create secret generic internal-cert -n neuvector  --from-file=tls.key --from-file=tls.crt --from-file=ca.crt
```

Sample 5.4.2 yaml with internal certificate configured:
*https://github.com/neuvector/manifests/blob/main/kubernetes/5.4.0/neuvector-k8s.yaml* 

Additional information about [internal certificates](../../02.deploying/01.production/04.internal/04.internal.md).

In the case of a PVC configuration, users can configure an existing PVC in the new installation to restore a configuration.


**Additional Note for Scanner:**

For current users with versions prior to 5.4.2, the certificate will remain available in the `neuvector/scanner:latest` until March 31, 2025. After this date, it will be removed. Users should plan to provide the same internal certificate to the controller, enforcer, scanner, and registry adapter to continue using the scanner.

Please note the stand-alone scanner will not be affected by these changes.

#### 5.4.1 November 2024

##### New Features

* **NVSHAS-8583**: Setting granular policy modes for rule sets, separate network policy mode and profile mode at per group level.
* **NVSHAS-9440**: Support separate network mode and Process and File mode in CRD.
* **NVSHAS-9369**: Add debug log category via helm deployment support for controller.
* **NVSHAS-9040**: Improve syslog message when admission control rule is denied in monitor mode.

##### Bug Fixes

* **NVSHAS-9416**: [Scanner] activemq-all-5.8.0.redhat-60024.jar can NOT be detected with any vul (but previous scanner build can).
* **NVSHAS-9447**: Controller/Scanner pods crashing - "Unsupported system Exit".
* **NVSHAS-9278**: CVE-2024-41110 is found in the latest scanner image.
* **NVSHAS-9467**: Custom group defined by the pod label does not propagate its profile data on the children containers.
* **NVSHAS-9442**: Deployment issue on ArgoCD.
* **NVSHAS-9436**: Possible CVE false negative against CVE-2024-7347.
* **NVSHAS-9468**: Fix CVE-2020-26160 to replace jwt-go with jwt:v5.
* **NVSHAS-9517**: Admission control is not consistent, getting incorrect results.
* **NVSHAS-9532**: The image scan is completed but deployment is still not allowed.
* **NVSHAS-9558**: JWT token expire reports http.StatusRequestTimeout 408.
* **NVSHAS-9576**: Clear password field for registry data when user uses controller mode with Jenkins to scan.
* **NVSHAS-9425**: Create nfq when container has vxlan.
* **NVSHAS-9571**: [Registries] Filter for all scanned image does not work well.
* **NVSHAS-9589**: Managed clusters disconnected - Version mismatch with primary cluster.
* **NVSHAS-8824**: User fails to delete own groups, cannot create namespace-scoped groups.
* **NVSHAS-9605**: Export group with invalid policy mode & process profile mode values is mistakenly allowed.
* **NVSHAS-9608**: Scanner does not report any error when controller reports an error for huge scan results ~23MB.
* **NVSHAS-9534**: Display error in admission controls.
* **NVSHAS-9600**: Cannot disable controller debug.
* **NVSHAS-9631**: Reduce some enforcer errors.
* **NVSHAS-9645**: Pre-existing CRD processing fails.
* **NVSHAS-9592**: No new scan despite new DB version.
* **NVSHAS-9212**: Display alerting msg in GET(/v1/eula) if the neuvector-binding-secret role(binding) is incorrect.
* **NVSHAS-9367**: Enhance error messages when registry fails to be connected.
* **NVSHAS-9475**: Background grid print is not fully covering when menu is collapsed.
* **NVSHAS-9485**: Incorrect message for 'Network Security Policy Mode' in UI.
* **NVSHAS-9480**: NV UI deployed on Rancher downstream cluster throws HTTP/403 after Rancher logout.
* **NVSHAS-9547**: Sorting is broken on the security risks --> vulnerabilities table.
* **NVSHAS-9570**: [Vulnerabilities] Change the legend description for different statuses on assets.
* **NVSHAS-9561**: Dashboard board overall security score should match the actual score.
* **NVSHAS-9572**: [Vulnerabilities] Filtered data was kept no matter user refresh or re-login on page.
* **NVSHAS-9597**: UI doesn't respond to any error when the controller returns 403 for POST(v1/group).
* **NVSHAS-8682**: CRD webhook service needs to be moved from crd helm chart to application helm chart.

##### Known issues

* In the 2.8.3 chart release, we have moved a previously misallocated resource from crds to core. If you use both crds and core charts, you might see issues during upgrade if you deploy core first. To resolve this, upgrade the crds first and then core charts.

#### 5.4 September 2024

##### Overview

+ **UI Improvements**: 
  + Display Rancher SSO users.
  + Manage JWT tokens.
  + Enhanced image navigation, and scan result links.
+ **Security Enhancements**: 
  + New compliance filters.
  + Support for CIS benchmarks, and OCI image signing.
+ **Network & Monitoring**: 
  + Advanced bandwidth and session tracking.
  + DDoS monitoring.
  + Multus network support.
+ **Cert Management**: 
  + New notifications for expiring internal certificates, including rotation capabilities.
+ **Automation & Integration**: 
  + Federation automation.
  + Rancher RBAC integration.
  + Improved admission control.
+ **Performance & Efficiency**: 
  + Reduced memory usage.
  + ISP data charge reduction.
  + Scanner cache stats exposure.
+ **Usability Improvements**: 
  + Bootstrap password support.
  + Cloud billing data archiving.
  + Namespace boundary enforcement.

##### New Features

+ **NVSHAS-9012**: Displaying Rancher SSO users on NV UI that have the same user name.
+ **NVSHAS-8939**: Provide an option on NV UI so that Rancher SSO session users can drop the current JWT token (i.e. logout).
+ **NVSHAS-7522**: Easy image navigation through registries.
+ **NVSHAS-8148**: Link from container image to registry image scan results.
+ **NVSHAS-9258**: Add a new notification for expiring certificates and internal certs.
+ **NVSHAS-8915**: Support for new compliance filters and Compliance report.
+ **NVSHAS-9403**: Filemonitor-UI: Allow user to delete predefined file monitor rule.
+ **NVSHAS-8423**: Detect group-level bandwidth, active session count, and session-rate violation based on configured thresholds.
+ **NVSHAS-9218**: Support for federal and CRD groups for DDoS monitoring.
+ **NVSHAS-8461**: Support CIS benchmarks for managed k8s services in the cloud.
+ **NVSHAS-7664**: Reduce ISP data charges during registry scanning.
+ **NVSHAS-8868**: Expose scanner cache statistics.
+ **NVSHAS-8676**: NV Protect improvement for benchmark scripts.
+ **NVSHAS-9255**: Customize Admission control search registries for image names without FQDN.
+ **NVSHAS-9144**: ID added for vulnerability profile for easy identification.
+ **NVSHAS-7687**: Support configuring log level (debug/error/info/warn) for enforcer and controller from CLI.
+ **NVSHAS-7518**: Change internal certificates for NeuVector components.
+ **NVSHAS-9287**: Enable internal cert rotation.
+ **NVSHAS-8562**: Add internal cert expiration notification.
+ **NVSHAS-8486**: Support Multus network interface.
+ **NVSHAS-7447**: Rancher RBAC integration with NeuVector.
+ **NVSHAS-7822**: Federation automation without scripting API calls.
+ **NVSHAS-8799**: Create a Compliance Framework for importing Compliance Templates.
+ **NVSHAS-8773**: Bootstrap password support during initial deployment.
+ **NVSHAS-6740**: Improvement of zero-drift baseline profile by enforcing the learned list in protect mode.
+ **NVSHAS-8325**: Enforce container namespace boundary for network rule.
+ **NVSHAS-8723**: Archive cloud billing data.
+ **NVSHAS-9086**: Reduce controller process memory usage by eliminating vulTrait data structure.
+ **NVSHAS-6979**: Ability to include comment of response rule in alert content.
+ **NVSHAS-8845**: Create APIKEY with role FedReader and FedAdmin.
+ **NVSHAS-9306**: Admission Control configuration assessment shows rule ID responsible for allowed or denied deployments.
+ **NVSHAS-9078**: Support for image signing for OCI images.
+ **NVSHAS-7945**: (*Available when deployed from a Rancher Chart.*) Support DISA STIG benchmark for Kubernetes.
+ **NVSHAS-8234**: Admission Control Logic allowing images that should be denied.

##### Bug Fixes

+ **NVSHAS-9005**: TypeError in registries: Cannot read properties of undefined (reading 'total_records').
+ **NVSHAS-9085**: Assets View PDF report shows 0% vulnerability even with present vulnerabilities.
+ **NVSHAS-9084**: Assets View PDF report shows NaN when image list is empty.
+ **NVSHAS-9128**: Security Events: Container cannot be displayed if there is no workload's namespace value.
+ **NVSHAS-9025**: Neuvector vulnerability acceptance scope for containers.
+ **NVSHAS-9155**: Registry Scan Image incorrect column name and missing File Name
+ **NVSHAS-9122**: Neuvector master logs out any time when using "Multiple Cluster" with Rancher SSO login.
+ **NVSHAS-9266**: Registry scan: Scan Report by Layer button should be hidden or disabled when there's no vulnerability.
+ **NVSHAS-9219**: Allow users to enable server cert validation for auth servers.
+ **NVSHAS-9246**: Filtering for CSV/PDF export does not work.
+ **NVSHAS-8947**: Cannot import NV configuration when authenticated through Rancher SSO.
+ **NVSHAS-9282**: UI: Editing OpenShift registry entry fails due to a missing token.
+ **NVSHAS-9098**: Enhance risk page loading user experience.
+ **NVSHAS-9267**: Do not allow UI on 5.4 master cluster to switch to pre-5.4 managed clusters because of REST API changes.
+ **NVSHAS-9285**: UI: Dropdown list button overlaps with other elements.
+ **NVSHAS-9302**: Cannot create APIKEY with role FedReader and FedAdmin.
+ **NVSHAS-8539**: Reconfigure proxy setting loses password.
+ **NVSHAS-9293**: Removal of unrelated image details in the vulnerability reports.
+ **NVSHAS-9238**: UI doesn't refresh the displayed cluster name after it's changed.
+ **NVSHAS-9363**: Notification Configuration > Webhooks grid are not properly aligned.
+ **NVSHAS-9362**: Security Risk Vulnerabilities filter returns 0 results.
+ **NVSHAS-8699**: Unable to distinguish the user if Rancher AD user is the same.
+ **NVSHAS-9062**: Displaying Rancher SSO users on NV UI that have the same username (Conversion on controller).
+ **NVSHAS-9071**: Some modules are not reported in the container scan only.
+ **NVSHAS-8242**: gRPC call to test if controller handles critical severity.
+ **NVSHAS-8908**: Parse X-Forwarded-Port correctly considering comma separator.
+ **NVSHAS-9024**: AdmissionControl Risky Role Perf.
+ **NVSHAS-9091**: Unable to report all modules under ol:9.1, photon:5.0, rhel:9.1, and amzn:2023 source in repo, registry, and standalone scan.
+ **NVSHAS-8997**: Largely reduce per node policy slot number to improve performance.
+ **NVSHAS-9059**: CRD groups visible in NV even after deletion from K8s.
+ **NVSHAS-9107**: Goroutine crash at rest.handlerConfigLocalCluster.
+ **NVSHAS-9108**: Port 18500 shouldn't be open.
+ **NVSHAS-9119**: Goroutine crash at probe.(*FileNotificationCtr).AddContainer().
+ **NVSHAS-9125**: CRD entry with invalid settings should not be allowed to create.
+ **NVSHAS-9124**: Docker: many unexpected healthcheck process incidents are reported.
+ **NVSHAS-9111**: NV should check `--event-qps > 0`.
+ **NVSHAS-9130**: Unexpected Container.Package.Updated incidents are found after a specific container is started.
+ **NVSHAS-9080**: Fed reader user is unable to access some REST APIs.
+ **NVSHAS-9092**: Namespaced user should not see global assets.
+ **NVSHAS-9116**: The worker cluster is able to leave if the connection is dropped.
+ **NVSHAS-8980**: Get host and tunnel interface on node successfully in oc 4.15.
+ **NVSHAS-9188**: Set mgmt-br interface as host interface for harvester node.
+ **NVSHAS-4858**: Not expand containers group in controller to improve policy deployment performance and reduce CPU and memory usage.
+ **NVSHAS-8700**: Rancher AD user is unable to log in to NeuVector sometimes.
+ **NVSHAS-9121**: Group's Network Monitoring Threshold setting cannot be edited.
+ **NVSHAS-9189**: Scan will get stuck in scheduling after controller is shutdown and restarted.
+ **NVSHAS-9019**: Fix unsynchronized link state for host interface.
+ **NVSHAS-8305**: Remove built-in certificate.
+ **NVSHAS-9013**: Removing BPF filter on the process monitor.
+ **NVSHAS-7853**: TLS handshake EOF.
+ **NVSHAS-9290**: User-added process profile rule not taking effect with ZD enabled.
+ **NVSHAS-9301**: NV deployed on Rancher Prime cannot tell it's Rancher flavor.
+ **NVSHAS-9289**: Allow upgrade when RBAC is missing.
+ **NVSHAS-7601**: Improve restore from PV config backup during scenarios.
+ **NVSHAS-7687**: Add syslog level setting for enforcer.
+ **NVSHAS-9292**: Fix Ingress Egress exposure shows 0 Vulnerabilities.
+ **NVSHAS-9270**: Support k3s for CIS benchmark pipeline.
+ **NVSHAS-9338**: Alert 'Managed cluster [id] is disconnected from primary'.
+ **NVSHAS-9358**: Image scan using proxy would fail.
+ **NVSHAS-9337**: Send log message when SYN flood is detected.
+ **NVSHAS-9209**: Delete domain cache when namespace is deleted from k8s.
+ **NVSHAS-8985**: Federated registries disappear after controller restart.

##### Known Issue:

+ **NVSHAS-9443**: Upgrade/Install through ArgoCD fails as it cannot create leases.coordination.k8s.io object.
+ **Workaround**: Create the given lease objects before upgrading to 5.4.0 using ARGO CD. Change the namespace if it is different than neuvector.

```bash
cat <<EOF | kubectl apply -f -
apiVersion: coordination.k8s.io/v1
kind: Lease
metadata:
  name: neuvector-controller
  namespace: neuvector
spec:
  leaseTransitions: 0
---
apiVersion: coordination.k8s.io/v1
kind: Lease
metadata:
  name: neuvector-cert-upgrader
  namespace: neuvector
spec:
  leaseTransitions: 0
EOF
```

#### 5.3.5 October 2025

# What's Changed

## References of fixed CVEs:

The fixed CVEs are:

* [Telemetry sender is vulnerable to MITM and DoS](https://github.com/neuvector/neuvector/security/advisories/GHSA-qqj3-g7mx-5p4w)
* [Enforcer is vulnerable to Command Injection and Buffer overflow](https://github.com/neuvector/neuvector/security/advisories/GHSA-c8g6-qrwh-m3vp)

For more information, refer to [Security Advisories and CVEs](versioned_docs/version-5.6/cve.md)

#### 5.3.4 July 2024

##### Bug Fixes
+ The `host` and `tunnel` interface are successfully retrieved with OpenShift CLI v4.15.
+ The IP range 169.254.x.x is excluded from the host interface IPs.
+ Reexam host interface after 1 minute of enforcer startup.
+ Fixed an issue where the OpenID issuer URL regex was failing.

+ Remediates following CVEs:

<table>
  <tr>
    <th>CVE</th>
    <th>Applies to</th>
    <th>Impact</th>
  </tr>
  <tr>
    <td>CVE-2023-42364</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-42365</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-6197</td>
    <td>curl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-6874</td>
    <td>curl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-5535</td>
    <td>openssl</td>
    <td>[[< CVE-critical >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-4741</td>
    <td>openssl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
</table>

#### 5.2.4-s5 July 2024

+ Remediates following CVEs:

<table>
  <tr>
    <th>CVE</th>
    <th>Applies to</th>
    <th>Impact</th>
  </tr>
  <tr>
    <td>CVE-2023-42363</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-42364</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-42365</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-42366</td>
    <td>busybox</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-6197</td>
    <td>curl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-6874</td>
    <td>curl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-5535</td>
    <td>openssl</td>
    <td>[[< CVE-critical >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-4603</td>
    <td>openssl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-4741</td>
    <td>openssl</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
</table>

#### 5.3.3 June 2024

##### Enhancements
+ Allow users to block the usage of specific storage classes from the `Admission Controls` page.
+ The `LDAP Authentication` has separated fields for `baseDN` and `groupDN` configuration.
+ The `Egress and Ingress chart` has a new vulnerability column which contains the `High` and `Medium` vulnerability count for each service.

##### Bug Fixes
+ Fixed bug related to `regex` when using a comma (`,`) in a multi-entry `Admission Control user criteria`.
+ Fixed bug where the CVE scan of `jar` packages would not show all packages affected by a same CVE. Now all occurences are reported.
+ Remediates following CVEs:

<table>
  <tr>
    <th>CVE</th>
    <th>Applies to</th>
    <th>Impact</th>
  </tr>
  <tr>
    <td>CVE-2024-35195</td>
    <td>python:requests</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-21011</td>
    <td>openjdk11</td>
    <td>[[< CVE-low >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-21012</td>
    <td>openjdk11</td>
    <td>[[< CVE-low >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-21068</td>
    <td>openjdk11</td>
    <td>[[< CVE-low >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-21085</td>
    <td>openjdk11</td>
    <td>[[< CVE-low >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-21094</td>
    <td>openjdk11</td>
    <td>[[< CVE-low >]]</td>
  </tr>
</table>

##### Other
+ Allow users to set resources for `updater-cron-job` when installing NeuVector with the Helm chart.
+ Prometheus exporter container versioning reviewed and dissociated to the `controller` versioning.
+ (Scanner) Detect the `R` package/module in Ubuntu and Red Hat Enterprise Linux.
+ (Scanner) Added support for PHP Composer scan.

#### 5.2.4-s3 April 2024

+ Remediates following CVEs:

<table>
  <tr>
    <th>CVE</th>
    <th>Applies to</th>
    <th>Impact</th>
  </tr>
  <tr>
    <td>CVE-2021-40633</td>
    <td>giflib</td>
    <td>[[< CVE-high >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-48161</td>
    <td>giflib</td>
    <td>[[< CVE-high >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-28757</td>
    <td>expat</td>
    <td>[[< CVE-high >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-39742</td>
    <td>giflib</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2023-45288</td>
    <td>go:golang.org/x/net</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-25629</td>
    <td>c-ares</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-3651</td>
    <td>python:idna</td>
    <td>[[< CVE-medium >]]</td>
  </tr>
  <tr>
    <td>CVE-2024-2511</td>
    <td>openssl</td>
    <td>[[< CVE-low >]]</td>
  </tr>
</table>

#### 5.3.2 April 2024

##### Bug Fixes

+ After upgrading to v5.3.1 from a previous NeuVector release, pre-existing NvClusterSecurityRule custom resources may be deleted inadvertently. NOTE: The 5.3.1 version has been removed from docker hub in order to prevent the upgrade issue.

#### 5.3.1 April 2024

:::danger important
The 5.3.1 version has been removed from docker hub in order to prevent the upgrade issue fixed in 5.3.2. Please use the 5.3.2 release.
:::

##### Enhancements
+ Allow users to define ‘accepted’ vulnerabilities when using Github actions so they don’t affect workflows.
+ Add Severity, Score level and Feed Rating filters to Assets > Registry > Image Vulnerabilities view.
+ Allow when configuring a registry if it should use the defined proxy for the registry image scans.

##### Bug Fixes
+ Security Risks > Vulnerabilities > Advanced Filter doesn't filter 'CVE without Fix'
+ Unexpected violation from container to hostmode container
+ Accept OCI image format when switching to docker api 1.24
+ Registry Scan should not scan non-image artifacts / not log an error
+ Allow for rootless key pair image signature verification without internet or sigstore dependence.
+ Security Events not getting permitted by network rules in a specific node (related to "Container Task chan full" error messages)
+ Container is unable to add to workload successfully (frequent occurences). Resulting from deadlock from channel messages.

##### Other
+ Update the scanner plugins for Jenkins, GitHub action, and Bamboo.
+ (Scanner) Accept OCI image format when switching to docker api 1.24.
+ (Scanner) Registry Scan should not scan non-image artifacts / not log an error.
+ (Scanner) Add support for php composer scan.

#### NeuVector UI Extension v. 1.0 for Rancher March 2024

+ After installation of NeuVector, [enabling/installing](/deploying/rancher#neuvector-ui-extension-for-rancher) the NeuVector UI Extension from Rancher will display a Dashboard for the cluster, including links to SSO to the full NeuVector cluster. NOTE: The extension may display as Third Party, which will be fixed in a future release. Also, after installation, Rancher 2.7.x users may see two NeuVector UI Ext icons in the list (bug). One icon will say Uninstall (meaning it is installed), and the other should say Install. This can be left as is, ie, don't Install again if the extension is already installed.

#### 5.2.4-s2 February 2024

+ Remediates following CVEs:
+ High cve: CVE-2023-52425 in expat, CVE-2024-20952 and CVE-2024-20918 in openjdk11
+ Med cve: CVE-2023-52426 in expat, CVE-2024-20926, CVE-2024-20921, CVE-2024-20945 and CVE-2024-20919 in openjdk11, CVE-2024-0727 and CVE-2023-6237 in openssl

#### 5.3.0 February 2024

#####Enhancements
+ Show external destination URLs (FQDN) in Dashboard (egress), PDF and CSV reports, as we well as in Network Activity screen and Security Events (violations) lists
+ In Discover mode, learn egresses to external FQDN address groups automatically. A new external FQDN custom group will be created unless the external connection matches an existing rule.
+ Enable ICMP learning (Discover mode) and blocking (Protect mode) through new Controller environment variable CTRL_EN_ICMP_POLICY = 1
+ Export CRDs into Github to support gitops to a default repo using console or REST API.
+ Support SAML SSO single logout with ADFS iDP
+ Add support for ARM64 platform. Pulling from ARM based platforms will automatically pull the appropriate ARM64 NeuVector images.
+ Support webhooks through a proxy
+ Improve admission control auditing function to include results of all rules. List the result of every rule, and adds another entry for the final action the would occur when evaluated in a live admission control deployment.
+ Apply disabled Admission Control rules via CRD or yaml (kubectl)
+ Vulnerability Profile export / import through console, CRD, or REST API. Importing will replace the existing profile. Deleting the CRD will result in an empty profile.
+ Compliance Profile template export / import through console, CRD, or REST API. Importing will replace the existing template.
+ Add a 'Manual' status in the compliance reports for CIS benchmarks that must be run manually by users (not run by NeuVector).
+ Improve UI loading/performance of Vulnerabilities page
+ Unify browser session login. With this, all tabs in the browser share the same login session, opening a new tab from an existing session does not ask for credentials, and when one tab logs out, all tabs are logged out.
+ Enhancements to security of console (UI): 1) add mandatory security headers (X-Content-Type-Options nosniff; X-XSS-Protection 1; mode=block; X-Frame-Options SAMEORIGIN; Cache-Control private, no-cache, no-store, must-revalidate
HTTP Strict Transport Security max-age=15724800, 2) add CSP header (e.g. set a ‘default-src’ directive), 3) remove server name disclosure
+ Support newer versions of CIS benchmarks. Kubernetes (1.8.0), Kubernetes V1.24 (1.0.0), Kubernetes V1.23 (1.0.1), RedHat OpenShift Container Platform (1.4.0)
+ Show in Assets -> Containers -> Container details containers which were scanned in registries versus runtime
+ Add link to Group in Security Risks -> Vulnerabilities -> Impact popup to easily edit group mode
+ Support deep linking in URL's to image and/or container vulnerability page 
+ Add password reset option for admin to reset user password in console Settings -> Users
+ Allow sending event logs to controller pod logs in Settings -> Configuration -> Notification. The events sent will begin with 'notification=' and be saved only to the leader controller pod. Note that there is a bug in this version where, in order to change the event level SYSLOG must be enabled (and can be disabled if desired after changing the level).
+ Remove requirement for controller/enforcer to mount "/host/cgroup".
+ Add Get Support menu with links to slack, documentation, and other resources
+ Fill message field to /v1/log/activity logs

#####Bug Fixes
+ Internal Server Error in Security Risks -> Vulnerabilities with a high number of CVEs 
+ SIGSEGV: segmentation violation on controller
+ Deleting vulnerable files (e.g. jar) doesn't remove from vulnerability list
+ Invalid Syslog certificate using the signature algorithm SHA256withECDSA
+ NeuVector shows security events that should be allowed by a Network Rule 
+ Un-managed node with "zombie" enforcer running 
+ Advanced Filter shows Remediation and Impact fields blank
+ Fix string handling to prevent unexpected Enforcer restart
+ Unexpected violations relating to built-in groups 
+ Support-bundle enforcer debug RPC call for data returns error 
+ Group is not matching in Security Events 
+ Send events to slack is not working - with proxy 
+ Showing security events for allowed network rules 

#####Other
+ Add run-time container engine (socket) automatic detection to Helm chart
+ Remove setting for running controller in privileged mode in Helm chart, and requirement for controller/enforcer to mount "/host/cgroup".
+ The sample kubernetes deployment files have been removed from the NeuVector docs. Please refer to the link for examples.

#####Highlighted Changes Which May Require Changes for Manual Deployments (all changes are already reflected in latest Helm chart for 5.3.x)
+ Auto detection of container run-time (socket) removes the need to specify the container run-time and socket path.
+ Removal of requirement to run the controller in privileged mode removes the need for mounting runtime socket and mounted /host/cgroup/
+ Added role/role binding for neuvector-binding-secret as well as neuvector-secret in yaml.
+ New service accounts and role bindings required for 5.3
+ All referenced deployment yaml files now have /5.3.0/ in their paths

#### 5.2.4-s1 January 2024

##### Security Patch Release

+ Remediates CVE-2023-6129 in openssl, and CVE-2023-46219, CVE-2023-46218 in curl.

#### 5.2.4 November 2023

##### Bug Fixes

+ Azure AKS ValidatingWebhookConfiguration changes and error logging.

#### 5.2.3 November 2023

##### Enhancements

+ Add support for NVD API 2.0 in Scanner.
+ Scan the container host in scanner standalone mode.

```shell
docker run --rm --privileged --pid=host neuvector/scanner -n
```

##### Bug Fixes

+ Scan on a node fails due to deadlocked docker cp / grpc issue.

#### 5.2.2-s1 October 2023

##### Security Update

+ Update packages to remediate CVEs including High CVE-2023-38545 and CVE-2023-43804.

#### 5.2.2 October 2023

##### Security Advisory for CVE-2023-32188

+ Remediate CVE-2023-32188 “JWT token compromise can allow malicious actions including Remote Code Execution (RCE)” by auto-generating certificate used for signing JWT token upon deployment and upgrade, and auto-generating Manager/RESTful API certificate during Helm based deployments.
  - Certificate for JWT-signing is created automatically by controller with validity of 90days and rotated automatically.
  - Auto-generation of Manager, REST API, and registry adapter certificate requires using Helm-based install using NeuVector helm version 2.6.3 or later. 
  - Built-in certificate is still used for yaml based deployments if not replaced during deployment; however, it is recommended to replace these (see next line).
  - Manual [replacement of certificate](/configuration/console/replacecert) is still supported and recommended for previous releases or yaml based deployments. See the NeuVector GitHub security advisory [here](https://github.com/neuvector/neuvector/security/advisories/GHSA-622h-h2p8-743x) for a description.
  - Use of user-supplied certificates is still supported as before for both Helm and yaml based deployments.
+ Add additional controls on custom compliance scripts. By default, custom script are now not allowed to be added, unless the environment variable CUSTOM_CHECK_CONTROL is added to Controller and Enforcer. Values are "disable" (default, not allowed), "strict" (admin role only), or "loose" (admin, compliance, and runtime-policy roles).
+ Prevent LDAP injection - username field is escaped.

##### Enhancements

+ Add additional scan data to CVE results sent by SYSLOG for layered scans
+ Support NVD API 2.0 for scan CVE database
+ Provide container image build date in Assets -> Container details
+ Adjust sorting for Network rules: disable sorting in Network rules view but enable sorting of network rules in Group view.
+ Enable/disable TLS 1.0 and TLS 1.1 detection/alerting with environment variables to Enforcer THRT_SSL_TLS_1DOT0, THRT_SSL_TLS_1DOT1. Disabled by default.
+ Add environment variable AUTO_PROFILE_COLLECT for Controller and Enforcer to assist in capturing memory usage when investigating memory pressure events. Set value = 1 to enable.
+ Configuration assessments against Admission Control should show all violations with one scan.
+ Add more options for CVE report criteria in Response Rules. Example 1 - "cve-high-with-fix:X" means: When # of (high vulnerability that have been fixed) >= X, trigger the response rule. Example 2 - "cve-high-with-fix:X/Y" means: When # of (high vulnerability that were reported Y days ago & have been fixed) >= X, trigger the response rule.

##### Bug Fixes

+ Export of group policy does not return any actual YAML contents
+ Improve pruning of namespaces with dedicated function
+ NeuVector namespace user cannot see assets-->namespaces
+ Skip handling the CRD CREATE/UPDATE requests if the CR's namespace is already deleted
+ Provide workaround for part of CRD groups which cannot be pruned successfully after namespaces are deleted.

#### 5.2.1 August 2023

##### Enhancements

+ Report layered scan results and additional CVE data in SYSLOG messages. This is enabled through a checkbox in Settings -> Configuration -> SYSLOG
+ Export NIST 800-53 mappings (to docker CIS benchmarks) in the exported csv compliance report
+ Support Proxy setting in image signature verification
+ Include image signature scan result in the downloaded CVE report
+ Support pod annotations for Admission Control Policies, available through the Custom criteria
+ Add Last Modified field to filter for vulnerabilities report printing, as well as Advanced Filter in Vulnerabilities view

##### Bug fixes

+ Do not create default admin with default password in initial NeuVector deployment for AWS billing (CSP adapter) offering, requiring user to use a secret to create admin username and password
+ Fix .json file which increased size and crashed a kubernetes node
+ Improve SQL injection detection logic
+ When installing the helm crd chart first before installing the NeuVector core chart, service accounts are missing
+ Image scan I.4.1 compliance result is incorrect
+ Vulnerability advanced filter report showing images from all other namespace

#### 5.2.0 July 2023 

##### Enhancements 

+ Support tokens for NeuVector API access. See Settings -> User, API Keys... to create a new API key. Keys can be set to default or custom roles.
+ Support AWS Marketplace PAYG billing for NeuVector monthly support subscriptions. Users can subscribe to NeuVector by SUSE support, billed monthly to their AWS account based on previous month's average node count usage. Details [here](https://open-docs.neuvector.com/deploying/awsmarketplace).
+ Support image signing for admission controls. Users can require NeuVector to verify that images are signed by specific parties before they can be deployed into the production environment, through an integration with Sigstore/Cosign. See Assets -> Sigstore Verifiers for creating new signature assets. Rules can then be created with criteria Image Signing and/or Image Sigstore Verifiers.
+ Enable each admission control rule to have its own mode of Monitor or Protect. A Deny action in Monitor mode will alert, and a Deny action in Protect mode will block. Allow actions are unaffected.
+ Add a new regex operator in Policy > Admission Control > Add Rule for Users and User Groups to support regex. Support operators "matches ANY regex in" and "matches NONE regex in".
+ Add support for admission control criteria such as resource limits. A new criteria is added for Resource Limits, and additional criteria are supported through the Custom Criteria settings.
+ Support invoking NeuVector scanner from Harbor registries through the [pluggable scanner](https://github.com/goharbor/pluggable-scanner-spec) interface. This requires configuration of the connection to the controller (exposed API). The Harbor adapter calls controller endpoint to trigger a scan, which can scan automatically on push. Interrogation services can be used for periodic scans. Scan results from Federation Primary controllers ARE propagated to remote clusters.  NOTE: There is an issue with the HTTPS based adapter endpoint error: please ignore Test Connection error, it does work even though an error is shown (skip certificate validation).
+ Searchable SaaS service for CVE lookups. Search the latest NeuVector CVE database to see if a specific CVE exists in the database. This service is available for NeuVector Prime (paid support subscription) customers. Contact support through your SCC portal for access.
+ Allow user to disable network protection but keep WAF/DLP functioning. Configure Network Policy Enablement in Settings -> Configuration.
+ Use less privileged services accounts as required for each NeuVector component. A variable “leastPrivilege” is introduced. The default is false. NOTE: Using the current helm chart with this variable on a release prior to 5.2.0 will not function properly.
+ Bind to non-default service account to meet CIS 1.5 5.1.5 recommendation.
+ Enable administrator to configure user default Session Time out in Settings -> Users, API Keys & Roles.
+ Customizable login banner and customizable UI header text for regulated and government deployments. Requirements for configuration can be found [here](https://open-docs.neuvector.com/configuration/customui).
+ SYSLOG support for TLS encrypted transport. Select TCP/TLS in Settings -> Configuration for SYSLOG.
+ Enable deployment of the NeuVector monitor helm chart from Rancher Manager.
+ Remove upper limit for top level domain in URL validator for registry scanning.
+ Scan golang dependencies, including run-time scans.
+ Support Debian 12 (Bookworm) vulnerability scan.
+ Add CSV export for Registry / Details to export CVEs for all images in configured registry in Assets -> Registries for a selected registry.
+ Allow NeuVector to set several ADFS certificates in parallel in x.509 certificate field.
+ Add and display the comment field for Response Rules.
+ Specify what NeuVector considers to be system containers through environment variable. For example, for Rancher and default namespaces: NV_SYSTEM_GROUPS=*cattle-system;default
+ Add support for Kubernetes 1.27 and OpenShift 4.12

##### Bug Fixes

+ Reduce repeating logs in enforcer/controller logs.
+ Multiple clusters page does not render.
+ Empty group auto-removal takes 2 hours to delete instead of 1 hour according to schedule.
+ Manually allowed network rule not getting applied and resulting in violation for pause image.
+ Blocking SSL connections even if a network rule permits the traffic under certain initial conditions.
+ Security events warning even with allowed network rules due to policy update issue in synchronization.
+ Network Activities wrongly associating custom group traffic to external.
+ Default service account token of the namespace mounted in each pod is too highly privileged.
+ Despite defining the network rules, violations getting logged under security events (false positives) when the container has stopped due to out of memory (OOM) error.
+ Allow user to disable/enable detection and protection against unmanaged container in cluster. This can be set through the Manager CLI:

```shell
set system detect_unmanaged_wl status -h
Usage: cli set system detect_unmanaged_wl status [OPTIONS] {true|false}

  Enable/disable detect unmanaged container
```

##### Other

+ Add "leastPrivilege" setting in Helm chart. Add helm option for New_Service_Profile_Baseline. A new Helm chart (core) version is published for 5.2.
+ Enable AWS Marketplace (billing adapter) integration settings in Helm chart.
+ Update configmap to support new features (multiple ADFS certificates, zero-drift, New_Service_Profile_Baseline, SYSLOG TLS, user timeout)
+ Update supported Kubernetes versions to 1.19+, and OpenShift 4.6+ (1.19+ with CRI-O)

#### 5.1.3 May 2023 

##### Enhancements 

+ Add new vulnerability feed for scanning Microsoft .NET framework.
+ Enforcer stats are disabled by default in Prometheus exporter to improve scalability.
+ Usability improvement: Using scanner to scan single image and print the result (see example below).
+ Add imagePullPolicy check in admission control rules criteria.
+ Show warning message when CRD schema is out of date.

##### Bug Fixes

+ Network Activity screen does not render or incorrectly renders.
+ Empty group auto-removal takes 2 hours to delete instead of 1 hour according to schedule.
+ Compliance profile doesn’t show in UI console.
+ Advanced Filter in Security Events Missing "Error" Level.
+ Saved password with special character fails on future authentication attempt.
+ Multiple clusters page does not render properly when requests are high.
+ Registry detail (bottom) pane not updating.

##### Scanner Sample Output

```shell
Image: https://registry.hub.docker.comlibrary/alpine:3.4
Base OS: alpine:3.4.6
TOTAL: 6, HIGH: 1, MEDIUM: 5, LOW: 0, UNKNOWN: 0
┌─────────┬───────────────┬──────────┬───────────┬───────────────┬────────────┐
│ PACKAGE │ VULNERABILITY │ SEVERITY │ VERSION   │ FIXED VERSION │ PUBLISHED  │
├─────────┼───────────────┼──────────┼───────────┼───────────────┼────────────┤
│ openssl │ CVE-2018-0732 │ High     │ 1.0.2n-r0 │ 1.0.2o-r1     │ 2018-06-12 │
│         ├───────────────┼──────────┤           ├───────────────┼────────────┤
│         │ CVE-2018-0733 │ Medium   │           │ 1.0.2o-r0     │ 2018-03-27 │
│         ├───────────────┤          │           ├───────────────┼────────────┤
│         │ CVE-2018-0734 │          │           │ 1.0.2q-r0     │ 2018-10-30 │
│         ├───────────────┤          │           ├───────────────┼────────────┤
│         │ CVE-2018-0737 │          │           │ 1.0.2o-r2     │ 2018-04-16 │
│         ├───────────────┤          │           ├───────────────┼────────────┤
│         │ CVE-2018-0739 │          │           │ 1.0.2o-r0     │ 2018-03-27 │
│         ├───────────────┤          │           ├───────────────┼────────────┤
│         │ CVE-2018-5407 │          │           │ 1.0.2q-r0     │ 2018-11-15 │
└─────────┴───────────────┴──────────┴───────────┴───────────────┴────────────┘
```

#### 5.1.2 March 2023 

##### Enhancements 

+ Support virtual host based address group and policy matching network protections. This enables a use case where two different FQDN addresses are resolved to the same IP address, but different rules for each FQDN should be enforced. A new custom group with ‘address=vh:xxx.yyy’ can be created using the ‘vh:’ indicator to enable this protection. A network rule can then use the custom group as the ‘From’ source based on the virtual hostname (instead of resolved IP address) to enforce different rules for virtual hosts. 
+ Compliance containers list to exclude exited containers. 
+ Enhance DLP rules to support simple wildcard in the pattern. 
+ Add support for cri-o 1.26+ and OpenShift 4.11+.
+ Make gravatar optional.
+ Display cluster namespace resource in console / UI. 
+ Display source severity/classification (e.g. Red Hat, Ubuntu...) along with NVD severity score in console. 
+ Don’t allow SSO/RBAC disabling for Rancher and OpenShift if user is authenticated through SSO. 
+ Add auto-scan enablement and deletion of unused groups aging to configMap. 
+ Include IP address for external source/destination in csv/pdf for implicit deny violations 
+ Various performance and scalability optimizations for controller and enforcer CPU and memory usage. 
 
##### Bug Fixes 

+ Fix application slowness on GKE Container Optimized OS (COS) nodes when in Protect mode.  
+ SUSE Linux (SLES) 15.4 CVE not matching in scanner. With this fix, if the severity is provided in the feed, the vulnerability will be added to the database, even if the NVD record is missing. It is possible that the report includes vulnerabilities without CVE scores. 

##### Other 

+ Enhance Admission Control CRD options in helm https://github.com/neuvector/neuvector-helm/pull/237. 
+ Add new enforcer environment variables to helm chart.

#### 5.1.1 February, 2023

##### Enhancements

+ Add “package” as information to the syslog-event for a detected vulnerability.
+ Add Enforcer environment variable ENF_NETPOLICY_PULL_INTERVAL - Value in seconds (recommended value 60) to reduce network traffic and resulting resource consumption by Enforcer due to policy updates/recalculations. (Note: this was an undocumented addition until August of 2023).

```yaml
           - name: ENF_NETPOLICY_PULL_INTERVAL
             value: "60"   <== regulate the pulling gap by 60 seconds
```

##### Bug Fixes

+ Empty group deletion errors "Object not found"
+ Traffic within the same container alerting/blocking
+ Unexpected implicit violations for istio egress traffic with allow rule in place
+ When upgrading from NeuVector 4.x release, incorrect pod group membership causes unexpected policy violation
+ OIDC authentication failed with ADFS when extra encoding characters appear in the request
+ High memory usage by dp creating and deleting pods
+ Update alpine to remediate several CVEs including Manager: CVE-2022-37454, CVE-2022-42919, CVE-2022-45061, CVE-2021-46848; Enforcer: CVE-2022-43551, CVE-2022-43552
+ Various UI bugs fixed

##### Other

+ Helm chart updated to enable replacement of certificate for internal communications

#### 5.1.0 December, 2022

##### Enhancements

+ Centralized, multi-cluster scanning (CVE) database. The primary (master) cluster can scan a registry/repo designated as a federated registry. The scan results from these registries will be synchronized to all managed (remote) clusters. This enables display of scan results in the managed cluster console as well as use of the results in admission control rules of the managed cluster. Registries only need to be scanned once instead of by each cluster, reducing CPU/memory and network bandwidth usage. 
+ Enhance admission control rules:
  - Custom criteria for admission control rules. Allow users to define resource criteria on all pod related fields and to be used in rules, for example item.metadata.annotationsKey contains 'neuvector', item.metadata.name='xyzzy' etc.
  - Add criteria to check for high risk RBAC settings for service accounts when deploying pods. These include criteria 'any action of workload resources', 'any action on RBAC', 'create workload resources', 'listing secrets', and 'exec into a container'.
  - Add semantic version comparison to modules for admission control rules. This enables \> or \< operators to applied to version numbers in rules (e.g. don't allow module curl\<6.2.0 to be deployed). This allows specific version checks on installed packages.
  - Add an admission control rule for Pod Security Admission (PSA) supported in Kubernetes 1.25+.
+ Add new env variable NO_DEFAULT_ADMIN which when enabled does not create an 'admin' user. This is used for Rancher SSO integration as the default. If not enabled, persistently warn the user and record events to change the default admin password if it is not changed from default.
+ Blocking login after failed login attemps now becomes the default. The default value is 5 attempts, and configurable in Settings -> Users & Roles-> Password Profile.
+ Add new env variable for performance tuning ENF_NO_SYSTEM_PROFILES, value: "1". When enabled, it will disable the process and file monitors. No learning processes, no profile modes, no process/file (package) incidents, and no file activity monitor will be performed. This will reduce CPU/memory resource usage and file operations.
+ Add a custom auto-scaling setting for scanner pods, with value Delayed, Immediate,  and Disabled. Important: Scanner auto-scaling is not supported when scanner is deployed with an OpenShift operator, as the operator will always change the number of pods to its configured value.
  - ***Delayed strategy:***
    -  When lead controller continuously sees "task count" > 0 for > 90 seconds, a new scanner pod is started if maxScannerPods is not reached yet
    -  When lead controller continuously sees "task count" is 0 for > 180 seconds, it scales down one scanner pod if minScannerPods is not reached yet
  - ***Immediate strategy:***
    -  Every time when lead controller sees "task count" > 0, a new scanner pod is started if maxScannerPods is not reached yet
    -  When lead controller continuously sees "task count" is 0 for > 180 seconds, it scales down one scanner pod if minScannerPods is not reached yet
+ Custom groups are now able to use namespace labels, including Rancher's namespace labels. Generally, pod and namespace labels can now be added to Custom Groups.
+ Add ability to hide selected namespaces, groups in Network Activity view.
+ Full support for Cilium cni.
+ Full support of OpenShift 4.9 and 4.10.
+ Build tools are now available for the NeuVector/Open Zero Trust (OZT) project at https://github.com/openzerotrust/openzerotrust.io. 
+ NeuVector now lists the version ID and SHA256 digest for each version of the controller, manager, enforcer at https://github.com/neuvector/manifests/tree/main/versions.
+ Anonymous telemetry data (number of nodes, groups, rules) is now reported to a Rancher cloud service upon deployment to assist the project team in understanding usage behavior. This can be disabled (opt-out) in UI or with configMap (No_Telemetry_Report) or REST API.
  +  You can disable the Report anonymous cluster data option, which is enabled by default. To change this setting, go to **Settings** → **Configuration** → **Report anonymous cluster data** in the NeuVector UI.  
+ (Addendum January 2023). Support for ServiceEntry based network policy with Istio. Egress network policy enforcement functionality was added in version 5.1.0 for pods to ServiceEntry destinations declared with Istio. Typically, a ServiceEntry defines how an external service referred by DNS name is resolved to a destination IP. Prior to v5.1, NeuVector could not detect and enforce rules for connections to a ServiceEntry, so all connections were classified as External. With 5.1, rules can be enforced for specific ServiceEntry destinations. IMPORTANT: If you are upgrading to v5.1 with an Istio based deployment, new rules must be created to allow these connections and avoid violation alerts. After upgrading, Implicit violations will get reported for newly visible traffic if allow rules don't exist. New traffic rules can be learned and auto-created under Discover mode. To allow this traffic, you can put the group into discover mode or create a custom group with addresses (or DNS name) and new network rule to this destination to allow the traffic. NOTE: There is a bug in 5.1.0 in the destination reported by the deny violations that do not represent the correct destination.  The bug reports both server_name and client_name are the same.  This issue will get addressed in an upcoming patch release.

##### Bug Fixes

+ Reduce controller memory consumption from unnecessary cis benchmark data created during rolling updates. This issue does not occur on new deployments.
+ Remove license from configuration screen (no longer required).

#### 5.0.6-s1 March, 2023

##### Bug Fixes

+ Update alpine packages to remediate CVEs in curl including CVE-2023-23914, CVE-2023-23915, and CVE-2023-23916

#### 5.0.6 February, 2023

##### Bug Fixes

+ High memory usage in dpMsgConnection	
+ High memory usage on dp process in enforcer if there are many learned policy rules with unmanaged workload (memory leak)
+ tcpdump is unable to start successfully when sniffering a traffic on container
+ Update alpine to remediate several CVEs including Manager: CVE-2022-37454, CVE-2022-42919, CVE-2022-45061, CVE-2021-46848; Enforcer: CVE-2022-43551, CVE-2022-43552

#### 5.0.5 November, 2022

##### Bug Fixes

+ Upgrading to 5.0.x results in an error message about Manager, Controller, Enforcer running different versions.
+ Enforcers experiencing go routine panic resulting in dp kill.  WebUI does not reflect enforcer as online.
+ Unexpected Process.Profile.Violation incident in NV.Protect group on which command on coreos.

#### 5.0.4 October, 2022

##### Security updates

+ Update alpine to remove critical CVE-2022-40674 in the manager expat library, as well as other minor CVEs.

##### Enhancements

+ Add support for Antrea CNI

##### Bug Fixes

+ Fix unexpected process.profile.violation incident in the NV.Protect group.
+ When SSL is disabled on manager UI access, user password is printed to the manager log.

#### 5.0.3 September, 2022

##### Enhancements

+ Do not display the EULA after successful restart from persistent volume.
+ Use the image filter in vulnerability profile setting to skip container scan results.
+ Support scanner in GitHub actions at https://github.com/neuvector/neuvector-image-scan-action.
+ Add Enforcer environment variables for disabling secrets scanning and running CIS benchmarks

```yaml
    env:
      - name: ENF_NO_SECRET_SCANS  (available after v4.4.4)
        value: "1"
      - name: ENF_NO_AUTO_BENCHMARK (after v5.0.3)
        value: "1"
```

##### Bug Fixes

+ Enforcer unable to start occasionally.
+ Connection leak on multi-cluster federation environments.
+ Compliance page not loading some times in Security Risks -> Compliance 

#### 5.0.2 July 2022

##### Enhancements

+ Rancher hardened and SELinux clusters are supported.

##### Bug Fixes

+ Agent process high cpu usage on k3s systems.
+ AD LDAP groups not working properly after upgrade to 5.0.
+ Enforcer keeps restating due to error=too many open files (rke2/cilium).
+ Support log is unable to download successfully.

#### 5.0.1 June 2022

##### Enhancements

+ Support vulnerability scan of openSUSE Leap OS (in scanner image).
+ Scanner: implement wipe-out attributes during reconstructing image repo.
+ Verify NeuVector deployment and support for SELinux enabled hosts. See below for details on interim patching until helm chart is updated.
+ Distinguish between Feature Chart and Partner Charts in Rancher UI more prominently.+ Improve ingress annotation for nginx in Rancher helm chart. Add / update
ingress.kubernetes.io/protocol: https to nginx.ingress.kubernetes.io/backend-protocol: "HTTPS".
+ Current OpenShift Operator supports passthrough routes for api and federation services. Additional Helm Value parameters are added to support edge and re-encrypt route termination types. 

##### Bug Fixes

+ AKS cluster could add unexpected key in admission control webhook.
+ Enforcer is not becoming operational on k8s 1.24 cluster with 1.64 containerd runtime. Separately, enforcer sometimes fails to start.
+ Any admin-role user(local user or SSO) who promotes a cluster to fed master should be automatically promoted to fedAdmin role.
+ When sso using Rancher default admin into NeuVector on master cluster, the NeuVector login role is admin, not fedAdmin.
+ Fix several goroutine crashes.
+ Implicit violation from host IP not associated with node.
+ ComplianceProfile does not show PCI tag.
+ LDAP group mapping sometimes is not shown.
+ Risk Review and Improvement tool will result in error message "Failed to update system config: Request in wrong format".
+ OKD 3.11 - Clusterrole error shows even if it exists.

##### CVE Remediations

+ High CVE-2022-29458 cve found on ncurses package in all images.
+ High CVE-2022-27778 and CVE-2022-27782 found on curl package in Updater image.

##### Details on SELinux Support

NeuVector does not need any additional setting for SELinux enabled clusters to deploy and function. Tested deploying NeuVector on RHEL 8.5 based SELinux enabled RKE2 hardened cluster. Neuvector deployed successfully if PSP is enabled and patching Manager and Scanner deployment. The next chart release should fix the below issue.

Attached example for enabling psp from Rancher chart and given below the commands for patching Manager and Scanner deployment. The user ID in the patch command can be any number.

```shell
kubectl patch deploy -ncattle-neuvector-system neuvector-scanner-pod --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
kubectl patch deploy -ncattle-neuvector-system neuvector-manager-pod --patch '{"spec":{"template":{"spec":{"securityContext":{"runAsUser": 5400}}}}}'
```

Example for enabling PSP:

```shell
[neuvector@localhost nv]$ getenforce
Enforcing
[neuvector@localhost nv]$ sestatus
SELinux status:                 enabled
SELinuxfs mount:                /sys/fs/selinux
SELinux root directory:         /etc/selinux
Loaded policy name:             targeted
Current mode:                   enforcing
Mode from config file:          enforcing
Policy MLS status:              enabled
Policy deny_unknown status:     allowed
Memory protection checking:     actual (secure)
Max kernel policy version:      33

[neuvector@localhost nv]$ kk get psp
Warning: policy/v1beta1 PodSecurityPolicy is deprecated in v1.21+, unavailable in v1.25+
NAME                      PRIV    CAPS                                      SELINUX    RUNASUSER          FSGROUP     SUPGROUP    READONLYROOTFS   VOLUMES
global-restricted-psp     false                                             RunAsAny   MustRunAsNonRoot   MustRunAs   MustRunAs   false            configMap,emptyDir,projected,secret,downwardAPI,persistentVolumeClaim
neuvector-binding-psp     true    SYS_ADMIN,NET_ADMIN,SYS_PTRACE,IPC_LOCK   RunAsAny   RunAsAny           RunAsAny    RunAsAny    false            *
system-unrestricted-psp   true    *                                         RunAsAny   RunAsAny           RunAsAny    RunAsAny    false            *
[neuvector@localhost nv]$ nvpo.sh
NAME                                        READY   STATUS    RESTARTS   AGE     IP           NODE                    NOMINATED NODE   READINESS GATES
neuvector-controller-pod-54f69f7f9c-6h822   1/1     Running   0          5m51s   10.42.0.29   localhost.localdomain   <none>           <none>
neuvector-enforcer-pod-jz77b                1/1     Running   0          5m51s   10.42.0.30   localhost.localdomain   <none>           <none>
neuvector-manager-pod-588488bb78-p6vf9      1/1     Running   0          111s    10.42.0.32   localhost.localdomain   <none>           <none>
neuvector-scanner-pod-87474dcff-s8vgt       1/1     Running   0          114s    10.42.0.31   localhost.localdomain   <none>           <none>
```

#### 5.0.0 General Availability (GA) Release May 2022

##### Enhancements

+ Automated Promotion of Group Modes. Promotes a Group’s protection Mode based on elapsed time and criteria. Does not apply to CRD created Groups. This features allows a new application to run in Discover for some time period, learning the behavior and NeuVector creating allow-list rules for Network and Process, then automatically moving to Monitor, then Protect mode. Discover to Monitor criterion: Elapsed time for learning all network and process activity of at least one live pod in the Group. Monitor to Protect criterion: There are no security events (network, process etc) for the timeframe set for the Group.
+ Support for Rancher 2.6.5 Apps and Marketplace chart. Deploys into cattle-neuvector-system namespace and enables SSO from Rancher to NeuVector. Note: Previous deployments from Rancher (e.g. Partner catalog charts, version 1.9.x and earlier), must be completely removed in order to update to the new chart.
+ Support scanning of SUSE Linux (SLE, SLES), and Microsoft Mariner
+ Zero-drift process and file protection. This is the new default mode for process and file protections. Zero-drift automatically allows only processes which originate from the parent process that is in the original container image, and does not allow file updates or new files to be installed. When in Discover or Monitor mode, zero-drift will alert on any suspicious process or file activity. In Protect mode, it will block such activity. Zero-drift does not require processes to be learned or added to an allow-list. Disabling zero-drift for a group will cause the process and file rules listed for the group to take effect instead.
+ Split policy mode protection for network, process/file. There is now a global setting available in Settings -> Configuration to separately set the network protection mode for enforcement of network rules. Enabling this (default is disabled), causes all network rules to be in the protection mode selected (Discover, Monitor, Protect), while process/file rules remain in the protection mode for that Group, as displayed in the Policy -> Groups screen. In this way, network rules can be set to Protect (blocking), while process/file policy can be set to Monitor, or vice versa.
+ WAF rule detection, enhanced DLP rules (header, URL, full packet). Used for ingress connections to web application pods as well as outbound connections to api-services to enforce api security.
+ CRD for WAF, DLP and admission controls. NOTE: required additional cluster role bindings/permissions. See Kubernetes and OpenShift deployment sections. CRD import/export and versioning for admission controls supported through CRD. 
+ Rancher SSO integration to launch NeuVector console through Rancher Manager. This feature is only available if the NeuVector containers are deployed through Rancher. This deployment pulls from the mirrored Rancher repository (e.g. rancher/mirrored-neuvector-controller:5.0.0) and deploys into the cattle-neuvector-system namespace. NOTE: Requires updated Rancher release 2.6.5 May 2022 or later, and only admin and cluster owner roles are supported at this time.
+ Supports deployment on RKE2.
+ Support for Federation of clusters (multi-cluster manager) through a proxy. Configure proxy in Settings -> Configuration, and enable proxy when configuring federation connections.
+ Monitor required rbac's clusterrole/bindings and alert in events and UI if any are missing.
+ Support criteria of resource limitations in admission control rules.
+ Support Microsoft Teams format for webhooks.
+ Support AD/LDAP nested groups under mapped role group.
+ Support clusterrolebindings or rolebindings with group info in IDP for Openshift.
+ Allow network rules and admission control rules to be promoted to a Federated rule.

##### Bug Fixes

+ Fix issue of worker federation role backup should restore into non-federated clusters.
+ Improve page loading times for large number of CVEs in Security Risks -> Vulnerabilities
+ Allow user to switch mode when they select all groups in Policy -> Groups menu. Warn if the Nodes group is also selected.
+ Collapse compliance check items of the same name and make expandable.
+ Enhance security of gRPC communications.
+ Fixed: unable to get correct workload privileged info in rke2 setup.
+ Fix issue with support of openSUSE Leap 15.3 (k8s/crio).

#### Other Updates

+ Helm chart update appVersion to 5.0.0 and chart version to 2.2.0
+ Removed serverless scanning feature/menu.
+ Removed support for Jfrog Xray scan result integration (Artifactory registry scan is still supported).
+ Support for deployment on ECS is no longer provided. The allinone should still be able to be deployed on ECS, however, the documentation of the steps and settings is no longer supported.

### Upgrading from NeuVector 4.x to 5.x (prior to 5.2.x)

:::note
The instructions below apply to upgrades to 5.0.x and 5.1.x. For 5.2.x, service accounts and bindings have changed, and should be [reviewed](https://open-docs.neuvector.com/deploying/kubernetes#deploy-neuvector) to plan upgrades.
:::

For Helm users, update to NeuVector Helm chart 2.0.0 or later. If updating an Operator or Helm install on OpenShift, see note below.

1. Delete old neuvector-binding-customresourcedefinition clusterrole

```shell
kubectl delete clusterrole neuvector-binding-customresourcedefinition
```

2. Apply new update verb for neuvector-binding-customresourcedefinition clusterrole

```shell
kubectl create clusterrole neuvector-binding-customresourcedefinition --verb=watch,create,get,update --resource=customresourcedefinitions
```

3. Delete old crd schema for Kubernetes 1.19+

```shell
kubectl delete -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/crd-k8s-1.19.yaml
```

4. Create new crd schema for Kubernetes 1.19+

```shell
kubectl apply -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.0.0/crd-k8s-1.19.yaml
kubectl apply -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.0.0/waf-crd-k8s-1.19.yaml
kubectl apply -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.0.0/dlp-crd-k8s-1.19.yaml
kubectl apply -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/5.0.0/admission-crd-k8s-1.19.yaml
```

5. Create a new Admission, DLP and WAF clusterrole and clusterrolebinding

```shell
kubectl create clusterrole neuvector-binding-nvwafsecurityrules --verb=list,delete --resource=nvwafsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvwafsecurityrules --clusterrole=neuvector-binding-nvwafsecurityrules --serviceaccount=neuvector:default
kubectl create clusterrole neuvector-binding-nvadmissioncontrolsecurityrules --verb=list,delete --resource=nvadmissioncontrolsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvadmissioncontrolsecurityrules --clusterrole=neuvector-binding-nvadmissioncontrolsecurityrules --serviceaccount=neuvector:default
kubectl create clusterrole neuvector-binding-nvdlpsecurityrules --verb=list,delete --resource=nvdlpsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvdlpsecurityrules --clusterrole=neuvector-binding-nvdlpsecurityrules --serviceaccount=neuvector:default
```

6. Update image names and paths for pulling NeuVector images from Docker hub (docker.io), e.g.

+ neuvector/manager:5.0.0
+ neuvector/controller:5.0.0
+ neuvector/enforcer:5.0.0
+ neuvector/scanner:latest
+ neuvector/updater:latest

Optionally, remove any references to the NeuVector license and registry secret in Helm charts, deployment yaml, configmap, scripts etc, as these are no longer required to pull the images or to start using NeuVector.

**Note about SCC and Upgrading via Operator/Helm**

Privileged SCC is added to the Service Account specified in the deployment yaml by Operator version 1.3.4 and above in new deployments. In the case of upgrading the NeuVector Operator from a previous version to 1.3.4 or Helm to 2.0.0, please delete Privileged SCC before upgrading.

```shell
oc delete rolebinding -n neuvector system:openshift:scc:privileged
```

#### Beta 1 version released April 2022

+ Feature complete, including Automated Promotion of Group Modes. Promotes a Group’s protection Mode based on elapsed time and criteria. Does not apply to CRD created Groups. This features allows a new application to run in Discover for some time period, learning the behavior and NeuVector creating allow-list rules for Network and Process, then automatically moving to Monitor, then Protect mode. Discover to Monitor criterion: Elapsed time for learning all network and process activity of at least one live pod in the Group. Monitor to Protect criterion: There are no security events (network, process etc) for the timeframe set for the Group.
+ Support for Rancher 2.6.5 Apps and Marketplace chart. Deploys into cattle-neuvector-system namespace and enables SSO from Rancher to NeuVector. Note: Previous deployments from Rancher (e.g. Partner catalog charts, version 1.9.x and earlier), must be completely removed in order to update to the new chart.
+ Tags for Enforcer, Manager, Controller: 5.0.0-b1 (e.g. neuvector/controller:5.0.0-b1)

#### Preview.3 version released March 2022

:::warning important

To update previous preview deployments for new CRD WAF, DLP and Admission control features, please update the CRD yaml and add new rbac/role bindings:

```shell
kubectl apply -f https://raw.githubusercontent.com/neuvector/manifests/main/kubernetes/latest/crd-k8s-1.19.yaml
kubectl create clusterrole neuvector-binding-nvwafsecurityrules --verb=list,delete --resource=nvwafsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvwafsecurityrules --clusterrole=neuvector-binding-nvwafsecurityrules --serviceaccount=neuvector:default
kubectl create clusterrole neuvector-binding-nvadmissioncontrolsecurityrules --verb=list,delete --resource=nvadmissioncontrolsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvadmissioncontrolsecurityrules --clusterrole=neuvector-binding-nvadmissioncontrolsecurityrules --serviceaccount=neuvector:default
kubectl create clusterrole neuvector-binding-nvdlpsecurityrules --verb=list,delete --resource=nvdlpsecurityrules
kubectl create clusterrolebinding neuvector-binding-nvdlpsecurityrules --clusterrole=neuvector-binding-nvdlpsecurityrules --serviceaccount=neuvector:default
```
:::

##### Enhancements

+ Support scanning of SUSE Linux (SLE, SLES), and Microsoft Mariner
+ Zero-drift process and file protection. This is the new default mode for process and file protections. Zero-drift automatically allows only processes which originate from the parent process that is in the original container image, and does not allow file updates or new files to be installed. When in Discover or Monitor mode, zero-drift will alert on any suspicious process or file activity. In Protect mode, it will block such activity. Zero-drift does not require processes to be learned or added to an allow-list. Disabling zero-drift for a group will cause the process and file rules listed for the group to take effect instead.
+ Split policy mode protection for network, process/file. There is now a global setting available in Settings -> Configuration to separately set the network protection mode for enforcement of network rules. Enabling this (default is disabled), causes all network rules to be in the protection mode selected (Discover, Monitor, Protect), while process/file rules remain in the protection mode for that Group, as displayed in the Policy -> Groups screen. In this way, network rules can be set to Protect (blocking), while process/file policy can be set to Monitor, or vice versa.
+ WAF rule detection, enhanced DLP rules (header, URL, full packet)
+ CRD for WAF, DLP and admission controls. NOTE: required additional cluster role bindings/permissions. See Kubernetes and OpenShift deployment sections. CRD import/export and versioning for admission controls supported through CRD. 
+ Rancher SSO integration to launch NeuVector console through Rancher Manager. This feature is only available if the NeuVector containers are deployed through Rancher. NOTE: Requires updated Rancher release (date/version TBD).
+ Supports deployment on RKE2.
+ Support for Federation of clusters (multi-cluster manager) through a proxy.
+ Monitor required rbac's clusterrole/bindings and alert in events and UI if any are missing.
+ Support criteria of resource limitations in admission control rules.

##### Bug Fixes

+ Fix issue of worker federation role backup should restore into non-federated clusters.

#### Preview.2 version released Feb 2022

+ Minor file and license changes in source, no features added.

#### Support for deployment on AWS ECS Deprecated

Support for deployment on ECS is no longer provided. The allinone should still be able to be deployed on ECS, however, the documentation of the steps and settings is no longer supported.

#### 5.0 'Tech Preview' January 2022

##### Enhancements

+ First release of an unsupported, 'tech-preview' version of NeuVector 5.0 open source version.
+ Add support for OWASP Top-10, WAF-like rules for detecting network attacks in headers or body. Includes support for CRD definitions of signatures and application to appropriate Groups.
+ Removes Serverless scanning features.

##### Bug Fixes

+ TBD

##### Other

+ Helm chart v1.8.9 is published for 5.0.0 deployments. If using this with the preview version of 5.0.0 the following changes should be made to values.yml:
  - Update the registry to docker.io
  - Update image names/tags to the preview version on Docker hub
  - Leave the imagePullSecrets empty
